[package]
name = "train-box"
version = "0.1.0"
edition = "2024"

[dependencies]
brio-smart-tech = { git = "https://github.com/Paluche/brio-smart-tech.git", branch = "main" }
btleplug = "0.11.8"
dbus = { version = "0.9.10", features = ["vendored"] }
rppal = "0.22.1"
strum = "0.27.2"
tokio = { version = "1.49.0", features = ["rt", "sync"] }

[[bin]]
# This is the main binary that runs on the raspberry pi
name = "train-box"
path = "src/main.rs"
